# MeteoNet

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/: CMakeLists.txt  build.sh  platformio.ini
firmware-old/: CMakeLists.txt
firmware-old/components/comms/: CMakeLists.txt  lora.cpp  lora.hpp  wifi.cpp
firmware-old/components/radiolib_esp32s3/: CMakeLists.txt  esp32s3HAL.cpp  esp32s3HAL.hpp  idf_component.yml
firmware-old/components/sensors/: BME280.hpp  CMakeLists.txt  DS18B20.hpp  sensor.hpp
firmware-old/main/: CMakeLists.txt  buffer.hpp  lock.hpp  main.cpp
firmware/components/comms/: CMakeLists.txt  wifi.cpp
firmware/components/comms/include/: lora.hpp  wifi.hpp
firmware/components/drivers/: CMakeLists.txt
firmware/components/sensors/: BME280.cpp  CMakeLists.txt  DS18B20.cpp  idf_component.yml
firmware/components/sensors/include/: BME280.hpp  DS18B20.hpp
firmware/include/: lora.hpp  mqtt.hpp  sensor.hpp  wifi.hpp
firmware/main/: CMakeLists.txt
firmware/main/include/: BME280.hpp  DS18B20.hpp  buffer.hpp  lock.hpp  lora.hpp  sensor.hpp  wifi.hpp
firmware/main/src/: main.cpp
firmware/src/: BME280.cpp  DS18B20.cpp
hardware/: MeteoNet.kicad_pcb  MeteoNet.kicad_prl  MeteoNet.kicad_pro  MeteoNet.kicad_sch
